# UPL_CNU2023

./: README.md
helloworld/: dune  helloworld.ml
helloworld/_build/: .db  .digest-db  log
helloworld/_build/default/.dune/: configurator.v2
helloworld/_build/default/.merlin-conf/: exe-helloworld
hw02/: dune  hw02.ml
hw03/: dune  hw03.ml
hw04/: dune  hw04.ml
hw04/_build/: .db  .digest-db  log
hw04/_build/default/: hw04.cma  hw04.cmxa  hw04.cmxs  hw04.ml  hw04.pp.ml
hw04/_build/default/.dune/: configurator
hw04/_build/default/.merlin-conf/: lib-hw04
hw05/: dune  hw05.ml
hw06/: dune  hw06.ml
hw07/: hw07.ml
hw07/202102695/: dune  hw07.ml  value.ml
hw07/202102695/parser/: dune
hw07/parser/: ast.ml  lexer.mll  parser.mly
hw08/: dune  hw08.ml
hw08/parser/: ast.ml  lexer.mll  parser.mly  parserMain.ml
hw09/: dune  fstore.ml  hw09.ml  store.ml
hw09/parser/: ast.ml  lexer.mll  parser.mly
hw10/: dune  hw10.ml
hw10/_build/: .db  .digest-db  log
hw10/_build/default/: ast.cma  hw10.cma  parserMain.cma  store.cma  store.ml
hw10/_build/default/.dune/: configurator.v2
hw10/_build/default/.merlin-conf/: lib-hw10  (+2 more)
hw10/parser/: ast.ml  parser.mly
hw11/: dune  hw11.ml
hw11/parser/: ast.ml  lexer.mll  parser.mly
hw12/: dune  hw12.ml  store.ml
hw12/_build/: .db  .digest-db  log
hw12/_build/default/: ast.cma  hw12.cma  parserMain.cma  parserMain__.ml-gen  store.cma
hw12/parser/: parser.mly
hw13/: addrManager.ml  dune  dune-project  env.ml  hw13.ml  memory.ml  value.ml
hw13/parser/: ast.ml  lexer.mll  parser.mly  parserMain.ml
(+78 files in other folders)
